--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,13 +54,6 @@ dependencies:
   
   # JSON serialization
   json_annotation: ^4.9.0
-  
-  # Google Sign In
-  google_sign_in: ^6.2.1
-  
-  # Firebase Auth (for Google Sign In)
-  firebase_auth: ^4.17.8
-  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
@@ -84,8 +77,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
