--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   http: ^1.2.1
   email_validator: ^2.1.17
   flutter_spinkit: ^5.2.1
+  # Firebase dependencies
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  firebase_database: ^10.4.0
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
