--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,10 @@ dependencies:
   email_validator: ^2.1.17
   flutter_spinkit: ^5.2.1
   # Firebase dependencies
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  firebase_database: ^10.4.0
-  google_sign_in: ^6.1.6
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.7.2
+  firebase_database: ^10.2.4
+  # google_sign_in: ^6.1.4  # Temporarily disabled to resolve build issues
 
 dev_dependencies:
   flutter_test:
