--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   provider: ^6.1.2
   fl_chart: ^0.68.0
   shared_preferences: ^2.2.3
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  crypto: ^3.0.3
   http: ^1.2.1
   email_validator: ^2.1.17
   flutter_spinkit: ^5.2.1
