--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.2
   firebase_database: ^10.2.4
+  cloud_firestore: ^4.9.1
   firebase_messaging: ^14.6.5
   # Google Sign-In
   google_sign_in: ^6.1.4
