--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -145,29 +145,29 @@ jobs:
           path: build/app/outputs/bundle/release/*.aab
           retention-days: 30
 
-  # Deploy to Firebase Hosting (Web)
-  deploy_web:
-    runs-on: ubuntu-latest
-    needs: [build_web]
-    name: Deploy Web to Firebase
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # Deploy to Firebase Hosting (Web) - DISABLED until Firebase service account is configured
+  # deploy_web:
+  #   runs-on: ubuntu-latest
+  #   needs: [build_web]
+  #   name: Deploy Web to Firebase
+  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Download web build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: web-build
-          path: build/web/
+  #     - name: Download web build artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: web-build
+  #         path: build/web/
 
-      - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PANEL_MONITOR_691C6 }}
-          channelId: live
-          projectId: panel-monitor-691c6
+  #     - name: Deploy to Firebase Hosting
+  #       uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: ${{ secrets.GITHUB_TOKEN }}
+  #         firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PANEL_MONITOR_691C6 }}
+  #         channelId: live
+  #         projectId: panel-monitor-691c6
 
   # Create Release
   create_release:
